fix: adjust font sizes for testimonials and footer for improved readability

--- a/css/main.css
+++ b/css/main.css
@@ -2710,7 +2710,7 @@ html.no-csstransitions .home-content__main {
 }
 
 .testimonial-text {
-    font-size: 1.8rem;
+    font-size: 2rem;
     line-height: 1.7;
     color: var(--black);
     margin-bottom: 20px;
@@ -2896,7 +2896,6 @@ html.no-csstransitions .home-content__main {
     }
 
     .testimonial-text {
-        font-size: 1.4rem;
         line-height: 1.4;
         padding: 0;
     }
@@ -2945,7 +2944,7 @@ html.no-csstransitions .home-content__main {
 
 @media only screen and (max-width: 1000px) {
     .clients-testimonials .testimonials p {
-        font-size: 2.2rem;
+        font-size: 2rem;
     }
     .clients-testimonials .testimonials p.text-small {
         font-size: 2rem;
@@ -4896,7 +4895,7 @@ footer .row {
   background-color: rgba(255, 255, 255, 0.2);
   padding: 0.3rem 0.8rem;
   border-radius: 50px;
-  font-size: 0.9rem;
+  font-size: 1.2rem;
 }
 
 .card-body {
